--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^11.13.0",
     "@fontsource-variable/inter": "^5.1.0",
     "@mui/icons-material": "^6.1.1",
+    "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^6.1.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -15,6 +16,9 @@
     "@turf/turf": "^7.1.0",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "esri-leaflet": "^3.0.13",
+    "esri-leaflet-geocoder": "^3.1.5",
+    "esri-leaflet-vector": "^4.2.5",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
