--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@turf/turf": "^7.1.0",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "esri-leaflet": "^3.0.13",
     "esri-leaflet-geocoder": "^3.1.5",
