--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,10 @@
     "esri-leaflet": "^3.0.13",
     "esri-leaflet-geocoder": "^3.1.5",
     "esri-leaflet-vector": "^4.2.5",
+    "geotiff": "^2.1.3",
     "leaflet": "^1.9.4",
+    "leaflet-geotiff-2": "^1.1.0",
+    "plotty": "^0.4.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
