--- a/client/package.json
+++ b/client/package.json
@@ -18,14 +18,18 @@
     "@testing-library/user-event": "^13.5.0",
     "@turf/turf": "^7.1.0",
     "axios": "^1.7.7",
+    "chroma-js": "^3.1.2",
+    "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "esri-leaflet": "^3.0.13",
     "esri-leaflet-geocoder": "^3.1.5",
     "esri-leaflet-vector": "^4.2.5",
+    "georaster": "^1.6.0",
+    "georaster-layer-for-leaflet": "^3.10.0",
     "geotiff": "^2.1.3",
+    "ih-leaflet-canvaslayer-field": "^1.5.3",
     "leaflet": "^1.9.4",
-    "leaflet-geotiff-2": "^1.1.0",
     "plotty": "^0.4.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
