Add IndexedDB caching for map overlay layers and improve component rendering
- Integrate Dexie.js for client-side IndexedDB caching of scalar and vector layers
- Create IndexedDBDebugger component for cache management and debugging
- Refactor Overlay component to use IndexedDB for layer data storage and retrieval
- Update Base, Labels, and MapControl components to use React Leaflet hooks
- Modify map layer rendering to improve performance and reduce network requests

--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "chroma-js": "^3.1.2",
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
+    "dexie": "^4.0.11",
     "dotenv": "^16.4.5",
     "esri-leaflet": "^3.0.13",
     "esri-leaflet-geocoder": "^3.1.5",
