--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "geotiff": "^2.1.3",
     "ih-leaflet-canvaslayer-field": "^1.5.3",
     "leaflet": "^1.9.4",
+    "material-ui-popup-state": "^5.3.3",
     "plotty": "^0.4.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
