--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "esri-leaflet": "^3.0.13",
     "esri-leaflet-geocoder": "^3.1.5",
     "esri-leaflet-vector": "^4.2.5",
+    "framer-motion": "^12.5.0",
     "georaster": "^1.6.0",
     "georaster-layer-for-leaflet": "^3.10.0",
     "geotiff": "^2.1.3",
