--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@turf/turf": "^7.1.0",
     "axios": "^1.7.7",
     "chroma-js": "^3.1.2",
+    "convert-units": "^2.3.4",
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "dexie": "^4.0.11",
