--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@mui/icons-material": "^6.1.1",
     "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^6.1.1",
+    "@react-pdf/renderer": "^4.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -39,6 +40,7 @@
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-leaflet-nauticsale": "^1.1.0",
+    "react-router-dom": "^7.4.1",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
