--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@turf/turf": "^7.1.0",
     "axios": "^1.7.7",
     "chroma-js": "^3.1.2",
     "convert-units": "^2.3.4",
+    "csv-to-markdown-table": "^1.5.0",
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "dexie": "^4.0.11",
@@ -28,6 +28,7 @@
     "esri-leaflet": "^3.0.13",
     "esri-leaflet-geocoder": "^3.1.5",
     "esri-leaflet-vector": "^4.2.5",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.5.0",
     "georaster": "^1.6.0",
     "georaster-layer-for-leaflet": "^3.10.0",
@@ -35,8 +36,8 @@
     "ih-leaflet-canvaslayer-field": "^1.5.3",
     "leaflet": "^1.9.4",
     "material-ui-popup-state": "^5.3.3",
-    "plotty": "^0.4.9",
     "react": "^18.3.1",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-leaflet-nauticsale": "^1.1.0",
