--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.750.0",
+    "@aws-sdk/client-s3": "^3.787.0",
     "@aws-sdk/lib-storage": "^3.750.0",
+    "@aws-sdk/s3-request-presigner": "^3.787.0",
+    "archiver": "^7.0.1",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "bullmq": "^5.41.6",
@@ -31,6 +33,7 @@
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.10.1",
     "p-limit": "^6.2.0",
     "path": "^0.12.7",
     "pg": "^8.13.3",
