--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.750.0",
     "@aws-sdk/lib-storage": "^3.750.0",
+    "@aws-sdk/s3-request-presigner": "^3.797.0",
+    "archiver": "^7.0.1",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "bullmq": "^5.41.6",
@@ -22,6 +24,7 @@
     "cors": "^2.8.5",
     "csrf": "^3.1.0",
     "csv-parser": "^3.0.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "fs-extra": "^11.3.0",
@@ -31,6 +34,7 @@
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.10.1",
     "p-limit": "^6.2.0",
     "path": "^0.12.7",
     "pg": "^8.13.3",
