--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "csrf": "^3.1.0",
     "csv-parser": "^3.0.0",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
