--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "express": "^4.21.0",
     "fs-extra": "^11.3.0",
     "gdal-async": "^3.10.2",
+    "gopd": "^1.2.0",
     "ioredis": "^5.5.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
