--- a/server/package.json
+++ b/server/package.json
@@ -40,6 +40,7 @@
     "p-limit": "^6.2.0",
     "path": "^0.12.7",
     "pg": "^8.13.3",
-    "redis": "^4.7.0"
+    "redis": "^4.7.0",
+    "smb2": "^0.2.11"
   }
 }
