--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource-variable/inter": "^5.1.0",
+    "@fontsource/commissioner": "^5.2.7",
     "@fortawesome/fontawesome-svg-core": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
