--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
     "react-leaflet-nauticsale": "^1.1.0",
     "react-router-dom": "^7.4.1",
     "react-scripts": "^5.0.1",
+    "timeago-react": "^3.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
