--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server",
     "dev": "nodemon server"
-    
   },
   "keywords": [],
   "author": "",
@@ -17,6 +16,7 @@
     "@aws-sdk/client-s3": "^3.787.0",
     "@aws-sdk/lib-storage": "^3.750.0",
     "@aws-sdk/s3-request-presigner": "^3.797.0",
+    "@google-analytics/data": "^5.1.0",
     "archiver": "^7.0.1",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
