--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fontsource-variable/inter": "^5.1.0",
     "@fontsource/commissioner": "^5.2.7",
     "@fortawesome/fontawesome-svg-core": "^6.7.1",
@@ -13,7 +13,10 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.1.1",
     "@mui/joy": "^5.0.0-beta.48",
-    "@mui/material": "^6.1.1",
+    "@mui/material": "^6.4.12",
+    "@mui/styles": "^6.4.12",
+    "@mui/system": "^7.1.1",
+    "@mui/x-date-pickers": "^8.5.2",
     "@react-pdf/renderer": "^4.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -24,6 +27,7 @@
     "csv-to-markdown-table": "^1.5.0",
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "dexie": "^4.0.11",
     "dotenv": "^16.4.5",
     "esri-leaflet": "^3.0.13",
@@ -37,15 +41,20 @@
     "ih-leaflet-canvaslayer-field": "^1.5.3",
     "leaflet": "^1.9.4",
     "lodash.debounce": "^4.0.8",
+    "lottie-react": "^2.4.1",
     "material-ui-popup-state": "^5.3.3",
     "react": "^18.3.1",
     "react-csv": "^2.2.2",
     "react-dom": "^18.3.1",
+    "react-google-charts": "^5.2.1",
     "react-leaflet": "^4.2.1",
     "react-leaflet-nauticsale": "^1.1.0",
     "react-router-dom": "^7.4.1",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.30.3",
     "react-timeago": "^8.2.0",
+    "recharts": "^2.15.3",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
